Annotation-based configuration
also:
- removed the need to create service loader files
- renamed api module to core and pulled out tiny api package
- moved ServiceInstance to another package