@@ -4,20 +4,16 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.awaitility.Awaitility.await;
 
 import java.time.Duration;
-import java.util.Collections;
 import java.util.Map;
-import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.ExecutionException;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import io.smallrye.stork.NoServiceInstanceFoundException;
-import io.smallrye.stork.Service;
-import io.smallrye.stork.ServiceInstance;
 import io.smallrye.stork.Stork;
+import io.smallrye.stork.api.Service;
+import io.smallrye.stork.api.ServiceInstance;
 import io.smallrye.stork.test.StorkTestUtils;
 import io.smallrye.stork.test.TestConfigProvider;
 
@@ -33,10 +29,7 @@ public class LeastResponseTimeLoadBalancerTest {
         TestConfigProvider.clear();
         TestConfigProvider.addServiceConfig("first-service", "least-response-time", "static",
                 null,
-                Map.of("1", FST_SRVC_1, "2", FST_SRVC_2));
-        TestConfigProvider.addServiceConfig("without-instances", "least-response-time", "static",
-                null,
-                Collections.emptyMap());
+                Map.of("address-list", String.format("%s,%s", FST_SRVC_1, FST_SRVC_2)));
 
         stork = StorkTestUtils.getNewStorkInstance();
     }
@@ -111,19 +104,6 @@ public class LeastResponseTimeLoadBalancerTest {
         selected = selectInstance(service);
         assertThat(asString(selected)).isEqualTo(FST_SRVC_2);
 
-    }
-
-    @Test
-    void shouldThrowNoServiceInstanceOnNoInstances() throws ExecutionException, InterruptedException {
-        Service service = stork.getService("without-instances");
-
-        CompletableFuture<Throwable> result = new CompletableFuture<>();
-
-        service.selectServiceInstance().subscribe().with(v -> log.error("Unexpected successful result: {}", v),
-                result::complete);
-
-        await().atMost(Duration.ofSeconds(10)).until(result::isDone);
-        assertThat(result.get()).isInstanceOf(NoServiceInstanceFoundException.class);
     }
 
     private ServiceInstance selectInstance(Service service) {
